--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "imujs",
   "version": "1.0.0",
   "description": "A lightweight JavaScript library for accessing and normalizing device motion and orientation sensors. IMU.js provides a simple interface to work with accelerometer, gyroscope, and device orientation data, with automatic handling of device orientation changes and sensor permissions.",
-  "main": "imu.js",
+  "main": "imu.umd.js",  
+  "module": "imu.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
